<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6fa"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/drawer"

        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".activity.HomeActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <include layout="@layout/normal_bar" />

            <LinearLayout
                android:id="@+id/frame_home"
                android:layout_width="match_parent"


                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical"
                    android:weightSum="1">


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="0.1">

                        <neusoft.duanxudong.com.classdemo.widget.FlashView
                            android:id="@+id/flash_view"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp" />


                    </FrameLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"

                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/home_btn_classes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:background="@drawable/circle_angle_blue"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:contentDescription="@string/hello"
                                        android:src="@drawable/grid_btn_classes" />
                                </LinearLayout>


                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_microclasses"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/home_btn_quesstions"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:background="@drawable/circle_angle_red"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_exam" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_question_bank"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/home_btn_resource"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp"

                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/circle_angle_green"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_resource" />
                                </LinearLayout>
                                <!---->
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_e_resource"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </LinearLayout>
                        <!--second row-->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"

                            android:orientation="horizontal">

                            <LinearLayout

                                android:id="@+id/home_btn_exam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/circle_angle_yellow"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_test" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/grid_exam_center"
                                    android:textColor="@color/black" />
                            </LinearLayout>


                            <LinearLayout
                                android:id="@+id/home_btn_project"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:background="@drawable/circle_angle_deep_green"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_open" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_project"
                                    android:textColor="@color/black" />
                            </LinearLayout>


                            <LinearLayout
                                android:id="@+id/comment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/circle_angle_deep_blue"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_bussness" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_bussness"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </LinearLayout>

                        <!-- third row -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"

                            android:layout_weight="0.7"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/home_btn_info"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="2dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/circle_angle_deep_pink"
                                    android:gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginTop="2dp"
                                    android:orientation="horizontal"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_notice" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_notice"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/home_btn_ask"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/circle_angle_purple"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_ask" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_ask"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                            <LinearLayout

                                android:id="@+id/home_btn_co"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/circle_angle_pink"
                                    android:gravity="center"
                                    android:padding="15dp">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/grid_btn_collection" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:gravity="center"
                                    android:text="@string/grid_collection"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="234dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#f5f6fa"
            android:fitsSystemWindows="true"
            app:menu="@menu/activity_main_drawer" />


    </android.support.v4.widget.DrawerLayout>
</LinearLayout>